# rust-rseq

./: .envrc  .gitignore  Cargo.toml  LICENSE  README.md  build.rs  deny.toml  flake.nix  justfile  rseq.ld  rseq.map
.cargo/: config.toml
build_utils/: Cargo.toml
build_utils/src/: generate_post_commit_offsets.rs  generate_rseq_gen.rs  handle_rseq_macros.rs  lib.rs  parse_rseq_macros.rs
rseq_macros/: Cargo.toml
rseq_macros/src/: lib.rs  rseq_function_handle.rs  test_utils.rs
rseq_main/: Cargo.toml  build.rs  build.rs1
rseq_main/src/: main.rs  main.rs1
rseq_payload/: Cargo.toml  build.rs  build.rs1  linker.ld
rseq_payload/src/: abort_handler.rs  critical_section_wrapper.rs  lib.rs  musl_binding.rs
rseq_utils/: Cargo.toml  build.rs
rseq_utils/src/: lib.rs  rseq_types.rs
src/: lib.rs  main.rs  rseq_lib_wrapper.rs  sys_rseq.rs
src1/: main.rs1
tests/: macros_test.rs  rseq_test.rs  so_build_test.rs
