[package]
name = "rseq_main"
version = "0.1.0"
edition = "2024"

[dependencies]
syscalls = "0.8.1"
dlopen-rs = "0.8" 
nc = "0.9"
enumflags2 = "0.7"
rseq_utils = { path = "rseq_utils" }

[build-dependencies]
build-print = "1.0.1"
object = "0.38.1"

[build]
target = "x86_64-unknown-linux-musl"


[profile.release]
lto = "fat"
strip = true
opt-level = 3
panic = "abort"
codegen-units = 1
