[package]
name = "build_utils"
version = "0.1.0"
edition = "2021"

[dependencies]
syn = { version = "2.0", features = ["full", "visit"] }
walkdir = "2.4"
quote = "1.0"
build-print = "1.0.1"
object = "0.38.1"
memmap2 = "0.9"
prettyplease = "0.2"
proc-macro2 = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
cargo_metadata = "0.18"
color-eyre = { version = "0.6", features = ["capture-spantrace", "tracing-error"] }
snafu = { version = "0.8", features = ["backtrace", "std"] }
