[package]
name = "rseq_payload"
version = "0.1.0"
edition = "2024"
build = "build.rs"

[lib]
name = "rseq_payload"
crate-type = ["cdylib"]

[dependencies]
rseq_utils = { path = "../rseq_utils", default-features = false }
cty = "0.2"

[build-dependencies]
bindgen = "0.72"

[profile.release]
panic = "abort"
lto = true
codegen-units = 1
incremental = false
opt-level = 3
strip = false

