[package]
name = "rseq_payload"
version = "0.1.0"
edition = "2024"
license = "MIT"
build = "build.rs"

[lib]
name = "rseq_payload"
crate-type = ["cdylib"]

[dependencies]
rseq_utils = { path = "../rseq_utils", default-features = false }

[build-dependencies]
bindgen = "0.72"

[profile.release]
lto = true
opt-level = 3
panic = "abort"
codegen-units = 1
strip = false

[profile.dev]
panic = "abort"

